sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:8: error: not found: value lgr
                   while (i+ecart < lgr)
                                    ^